; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_scm-valprint.c_scm_ipruk.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_scm-valprint.c_scm_ipruk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ui_file = type { i32 }

@.str = private unnamed_addr constant [13 x i8] c"#<unknown-%s\00", align 1
@.str.1 = private unnamed_addr constant [19 x i8] c" (0x%lx . 0x%lx) @\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c" 0x%s>\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, %struct.ui_file*)* @scm_ipruk to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @scm_ipruk(i8* %0, i32 %1, %struct.ui_file* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.ui_file*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.ui_file* %2, %struct.ui_file** %6, align 8
  %7 = load %struct.ui_file*, %struct.ui_file** %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 (%struct.ui_file*, i8*, ...) @fprintf_filtered(%struct.ui_file* %7, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i8* %8)
  %10 = load i32, i32* %5, align 4
  %11 = call i64 @SCM_CELLP(i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %20

13:                                               ; preds = %3
  %14 = load %struct.ui_file*, %struct.ui_file** %6, align 8
  %15 = load i32, i32* %5, align 4
  %16 = call i64 @SCM_CAR(i32 %15)
  %17 = load i32, i32* %5, align 4
  %18 = call i64 @SCM_CDR(i32 %17)
  %19 = call i32 (%struct.ui_file*, i8*, ...) @fprintf_filtered(%struct.ui_file* %14, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0), i64 %16, i64 %18)
  br label %20

20:                                               ; preds = %13, %3
  %21 = load %struct.ui_file*, %struct.ui_file** %6, align 8
  %22 = load i32, i32* %5, align 4
  %23 = call i8* @paddr_nz(i32 %22)
  %24 = call i32 (%struct.ui_file*, i8*, ...) @fprintf_filtered(%struct.ui_file* %21, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0), i8* %23)
  ret void
}

declare dso_local i32 @fprintf_filtered(%struct.ui_file*, i8*, ...) #1

declare dso_local i64 @SCM_CELLP(i32) #1

declare dso_local i64 @SCM_CAR(i32) #1

declare dso_local i64 @SCM_CDR(i32) #1

declare dso_local i8* @paddr_nz(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
